--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,9 @@ dependencies:
 - pytorch
 - jupyter
 - ipyparallel
+- fluidsynth
+- ffmpeg
+- pysoundfile
 - pip
 - pip:
   - youtube_dl==2019.9.1
@@ -24,4 +27,3 @@ dependencies:
   - gizeh==0.1.11
   - moviepy==1.0.0
   - matplotlib==3.1.1
-  - ffmpeg
